--- a/OrderFood/src/main/webapp/WEB-INF/css/style.css
+++ b/OrderFood/src/main/webapp/WEB-INF/css/style.css
@@ -7,6 +7,248 @@
 	background-color: #343C71!important;
 }
 
-.caroselset{
-	
+/*footer*/
+.col_white_amrc { color:#FFF;}
+footer { width:100%; background-color:#263238; min-height:250px; padding:10px 0px 25px 0px ;}
+.pt2 { padding-top:40px ; margin-bottom:20px ;}
+footer p { font-size:13px; color:#CCC; padding-bottom:0px; margin-bottom:8px;}
+.mb10 { padding-bottom:15px ;}
+.footer_ul_amrc { margin:0px ; list-style-type:none ; font-size:14px; padding:0px 0px 10px 0px ; }
+.footer_ul_amrc li {padding:0px 0px 5px 0px;}
+.footer_ul_amrc li a{ color:#CCC;}
+.footer_ul_amrc li a:hover{ color:#fff; text-decoration:none;}
+.fleft { float:left;}
+.padding-right { padding-right:10px; }
+
+.footer_ul2_amrc {margin:0px; list-style-type:none; padding:0px;}
+.footer_ul2_amrc li p { display:table; }
+.footer_ul2_amrc li a:hover { text-decoration:none;}
+.footer_ul2_amrc li i { margin-top:5px;}
+
+.bottom_border { border-bottom:1px solid #323f45; padding-bottom:20px;}
+.foote_bottom_ul_amrc {
+	list-style-type:none;
+	padding:0px;
+	display:table;
+	margin-top: 10px;
+	margin-right: auto;
+	margin-bottom: 10px;
+	margin-left: auto;
 }
+.foote_bottom_ul_amrc li { display:inline;}
+.foote_bottom_ul_amrc li a { color:#999; margin:0 12px;}
+
+.social_footer_ul { display:table; margin:15px auto 0 auto; list-style-type:none;  }
+.social_footer_ul li { padding-left:20px; padding-top:10px; float:left; }
+.social_footer_ul li a { color:#CCC; border:1px solid #CCC; padding:8px;border-radius:50%;}
+.social_footer_ul li i {  width:20px; height:20px; text-align:center;}
+
+/* login */
+/*
+    Note: It is best to use a less version of this file ( see http://css2less.cc
+    For the media queries use @screen-sm-min instead of 768px.
+    For .omb_spanOr use @body-bg instead of white.
+*/
+@media ( min-width : 768px) {
+	.omb_row-sm-offset-3 div:first-child[class*="col-"] {
+		margin-left: 25%;
+	}
+}
+
+.omb_login .omb_authTitle {
+	text-align: center;
+	line-height: 300%;
+}
+
+.omb_login .omb_socialButtons a {
+	color: white;
+	/* //
+	In
+	yourUse
+	@body-bg
+	opacity
+	:
+	0.9; */
+}
+
+.omb_login .omb_socialButtons a:hover {
+	color: white;
+	opacity: 1;
+}
+
+.omb_login .omb_socialButtons .omb_btn-facebook {
+	background: #3b5998;
+}
+
+.omb_login .omb_socialButtons .omb_btn-twitter {
+	background: #00aced;
+}
+
+.omb_login .omb_socialButtons .omb_btn-google {
+	background: #c32f10;
+}
+
+.omb_login .omb_loginOr {
+	position: relative;
+	font-size: 1.5em;
+	color: #aaa;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
+}
+
+.omb_login .omb_loginOr .omb_hrOr {
+	background-color: #cdcdcd;
+	height: 1px;
+	margin-top: 0px !important;
+	margin-bottom: 0px !important;
+}
+
+.omb_login .omb_loginOr .omb_spanOr {
+	display: block;
+	position: absolute;
+	left: 50%;
+	top: -0.6em;
+	margin-left: -1.5em;
+	background-color: white;
+	width: 3em;
+	text-align: center;
+}
+
+.omb_login .omb_loginForm .input-group.i {
+	width: 2em;
+}
+
+.omb_login .omb_loginForm  .help-block {
+	color: red;
+}
+
+@media ( min-width : 768px) {
+	.omb_login .omb_forgotPwd {
+		text-align: right;
+		margin-top: 10px;
+	}
+}
+
+/*
+Foods menu
+*/
+.food-menu-card {
+	padding: 30px 20px;
+	background-color: black;
+	border-radius: 8px;
+}
+
+.food-menu-card .media {
+	margin-bottom: 20px;
+}
+
+.food-menu-card .media .img-fluid {
+	border-radius: 3px;
+	width: 80px;
+}
+
+.food-menu-card .media .d-flex {
+	position: relative;
+}
+
+.food-menu-card .media .d-flex:before {
+	content: "";
+	position: absolute;
+	left: auto;
+	right: 0;
+	width: 100%;
+	height: 1px;
+	background-color: rgba(255, 255, 255, 0.2);
+	top: 50%;
+}
+
+.food-menu-card .media h3 {
+	position: relative;
+	display: inline-block;
+	margin-bottom: 0;
+	padding-right: 1.07143rem;
+	background-color: #000;
+	z-index: 2;
+}
+
+.food-menu-card .media strong {
+	background-color: #000;
+	display: block;
+	padding-left: 15px;
+	z-index: 2;
+	position: relative;
+}
+
+.tabs-menu-nav>li>a {
+	color: #fff;
+	display: block;
+	font-size: 16px;
+	border-bottom: 3px solid transparent;
+	opacity: 0.5;
+}
+
+.tabs-menu-nav>li>a.active {
+	opacity: 1;
+	border-bottom-color: #db2e2e;
+}
+
+.media-body, p {
+	color: #999;
+}
+
+
+/* register */
+.error {
+	background-color: red;
+	color: white;
+}
+
+.divider-text {
+	position: relative;
+	text-align: center;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+.divider-text span {
+	padding: 7px;
+	font-size: 12px;
+	position: relative;
+	z-index: 2;
+}
+
+.divider-text:after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	border-bottom: 1px solid #ddd;
+	top: 55%;
+	left: 0;
+	z-index: 1;
+}
+
+.btn-facebook {
+	background-color: #405D9D;
+	color: #fff;
+}
+
+.btn-twitter {
+	background-color: #42AEEC;
+	color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
